# neural-time-series-segmentation

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
librelane/: README.md  config.json  extract_reports.py
results/: all_sessions_combined.csv  compiled_detector_results.xlsx  concatenated_overall_results.csv  experiments_summary_per_detector.xlsx  experiments_summary_per_session.xlsx  grouped_by_detector.xlsx  grouped_by_session.xlsx  ml_model_report.txt  ml_model_results.xlsx  paper_results_table.xlsx
src/classifiers/: classifier.v  processing_unit_ado.v  processing_unit_aso.v  processing_unit_ed.v  processing_unit_neo.v
src/feature_extractors/: abs.v  ado.v  aso.v  detectors_wrapper.v  ed.v  neo.v  welford_std_dev.v  ztest.v
src/top_level_module/: top_level_module.v
tb/cocotb/: Makefile  signals.tcl  test_detectors.py
tb/verilog/: classifier_tb.v  detectors_tb.v  wave.gtkw
verilog/classifiers/: classifier.vhd  processing_unit_ado.vhd
verilog/feature_extractors/: abs.vhd  abs_tb.vhd  ado.vhd  aso.vhd  ed.vhd  neo.vhd  welford_std_dev.vhd  ztest.vhd
