[tool.poetry]
name = "neural-time-series-segmentation"
version = "0.1.0"
description = "Neural time series segmentation with RTL verification"
authors = ["GGChe <ggche@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.0"
cocotb = "^1.8.0"
plotly = "^5.18.0"
pandas = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
